# NeuroStream

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  pyproject.toml  requirements.txt
docs/: academic_introduction.md  architecture.md  index.md  math_formulas.html  math_formulas.md  positioning.md  quickstart.md
docs/api/: config.md  encoder.md  forgetting.md  memory.md  pipeline.md  runtime.md  shadow.md  types.md
docs/experiments/: medical_v3.md  v4_phase1_ablation.md
docs/learning/: 00_knowledge_map.md  01_systematic.md  02_project_codex.md  build_html.py  learning_path.html
output_unsupervised/: eval_report.json
release/: MODEL_CARD.md
